Close scrollbar grab issue

--- a/Minimal.css
+++ b/Minimal.css
@@ -3493,7 +3493,7 @@ body.hider-frameless .titlebar {
 .workspace-split.mod-vertical > * > .workspace-leaf-resize-handle,
 .workspace-split.mod-left-split > .workspace-leaf-resize-handle {
   border-right: var(--border-width) solid var(--background-divider);
-  width: 8px !important;
+  width: 4px !important;
   background: transparent; }
 
 .workspace-split.mod-right-split > .workspace-leaf-resize-handle:hover,
